--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -81,5 +81,6 @@
 {% endblock %}
 
 <script type="text/javascript" src="{% static 'javascript/index.js' %}"></script>
+<script type="text/javascript" src="{% static 'javascript/all_frontend_views.js' %}"></script>
 </body>
 </html>
