--- a/frontend/templates/instock-sportrigs.html
+++ b/frontend/templates/instock-sportrigs.html
@@ -33,7 +33,7 @@
                             {% endif %}
                             <div class="description">{{ x.description }}</div>
                             <p class="price-vector">${{ x.price }}</p>
-                            <button type="button">BUY NOW</button>
+                            <button onclick="loadNewUserForm({{ x.id }})" type="button">BUY NOW</button>
                             {% if x.po_number %}
                                 <p>{{ x.po_number }}</p>
                             {% endif %}
